# odzipweb

./: CMakeLists.txt  Makefile.bak  README.md  compress.c  decompress.c  huffman.c  libodzip.h  main.c
web/: build.sh  index.html  odzip.js  readme  style.css  wasm.c
